<resources>
    <string name="app_name">IMarkdownX</string>
    <string name="nav_edit">edit</string>
    <string name="nav_todo">todo</string>
    <string name="nav_my">my</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_example" translatable="false">exampleActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btn_save">save</string>
    <string name="btn_render">render</string>
    <string name="btn_back">back</string>
    <string name="toast_saved_success">saved successfully!</string>
    <string name="item_delete">delete</string>
    <string name="hint_title">Title:</string>
    <string name="hint_content">Content:</string>
    <string name="btn_undo">undo</string>
    <string name="item_lock">lock</string>
    <string name="item_set_password">set password</string>
    <string name="item_private_mode">private mode</string>
    <string name="toolbar_title_private_mode">private mode</string>
    <string name="item_unlock">unlock</string>
    <string name="item_exit_private_mode">exit private mode</string>
    <string name="login_username">username:</string>
    <string name="default_username" translatable="false">Guest</string>
    <string name="label_change_private_password_confirm">confirm:</string>
    <string name="label_change_private_password_new_password">new password:</string>
    <string name="label_change_private_password_origin_password">origin password:</string>
    <string name="btn_confirm">confirm</string>
    <string name="btn_cancel">cancel</string>
    <string name="toast_success_change_psw">change private password successfully</string>
    <string name="toast_failed_change_psw">change private password failed</string>
    <string name="btn_redo">redo</string>
    <string name="btn_underline">underline</string>
    <string name="btn_bold">bold</string>
    <string name="btn_italic">italic</string>
    <string name="btn_file">file</string>
    <string name="btn_code">code</string>
    <string name="btn_left_indent">left_indent</string>
    <string name="btn_right_indent">right indent</string>
    <string name="btn_link">link</string>
    <string name="btn_link_alt">link_alt</string>
    <string name="btn_list">list</string>
    <string name="btn_table">table</string>
    <string name="dialog_row_number">row:</string>
    <string name="dialog_col_number">col:</string>
    <string name="btn_from_photo">from photo</string>
    <string name="btn_from_internet">input by myself</string>
    <string name="title_enter_table_info">Enter table info</string>
    <string name="title_import_image_from">Import image from..</string>
    <string name="title_enter_privacy_mode_password">Enter privacy mode password:</string>
    <string name="toast_privacy_mode">privacy mode</string>
    <string name="toast_password_wrong">password wrong</string>
    <string name="btn_hr">hr</string>
    <string name="default_folder_name">default</string>
    <string name="title_create_a_folder">Create a folder:</string>
    <string name="hint_folder_name">folder name:</string>
    <string name="item_change_folder_name">change folder name</string>
    <string name="item_change_folder_color">change folder color</string>
    <string name="title_change_the_color">Change the color: (0~255)</string>
    <string name="dialog_input_red" translatable="false">R</string>
    <string name="dialog_input_green" translatable="false">G</string>
    <string name="dialog_input_blue" translatable="false">B</string>
    <string name="title_folder_change_name">Change name to:</string>
    <string name="fingerprint_verify_fingerprint_to_continue">verify fingerprint to continue</string>
    <string name="dialog_verify_fingerprint">Verify finger print</string>
    <string name="toast_failed_verify_fingerprint">failed to verify fingerprint</string>
    <string name="toast_delete_success">delete successfully!</string>
    <string name="toast_delete_failed">can not delete the last folder!</string>
    <string name="my_title">My</string>
    <string name="header_description" translatable="false">header</string>
    <string name="logout_text">logout</string>
    <string name="synchronize_notes_text">synchronize notes</string>
    <string name="login">login with account</string>
    <string name="register">create an account</string>
    <string name="delete_account_text">delete account</string>
    <string name="update_userinfo_text">update user information</string>
    <string name="login_text">login</string>
    <string name="btn_register">register</string>
    <string name="login_password">password:</string>
    <string name="user_title_image" translatable="false">user title image</string>
    <string name="username_empty_toast">the username should not be empty</string>
    <string name="password_empty_toast">password should not be empty</string>
    <string name="delete_account_ensure_title">Delete the account</string>
    <string name="delete_account_ensure_message">Are you sure to delete the account?</string>
    <string name="count_notes_text">notes: %d</string>
    <string name="register_username">username:</string>
    <string name="register_password">password:</string>
    <string name="register_confirm_password">confirm password:</string>
    <string name="register_nickname">nickname:</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="register_gender">Gender:</string>
    <string name="register_email">email:</string>
    <string name="confirm_password_wrong_toast">confirm password should be same as the password</string>
    <string name="field_empty_toast">field should not be empty</string>
    <string name="register_phone">phone number:</string>
    <string name="btn_change_password">change password</string>
    <string name="update_user_information">update user information</string>
    <string name="change_password_title">change password</string>
    <string name="sync_success_toast">sync successfully</string>
    <string name="delete_remote_file_toast">successfully delete the remote file</string>
    <string name="todo_list_title">Todo list</string>
    <string name="todo_content_hint">todo content:</string>
    <string name="btn_import_from_notes">import from notes</string>
    <string name="import_todo_alert">Are you sure to import all the todo item from your notes to here? (not include privacy notes)</string>
    <string name="todo_list_import_success_toast">import todo list successfully</string>
    <string name="color_range_toast">the color should be in range(0~255)</string>
    <string name="server_error_toast">server error</string>
    <string name="delete_confirm_toast">Are you sure to delete the items are done?</string>
</resources>