<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="xyz.aiinirii.imarkdownx.ui.user.register.RegisterViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.register.RegisterFragment">

        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="@dimen/width_small"
            android:layout_height="@dimen/width_small"
            android:contentDescription="@string/user_title_image"
            android:src="@drawable/title_img_user"
            app:layout_constraintBottom_toTopOf="@+id/register_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.816" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/font_huge"
            app:layout_constraintBottom_toTopOf="@+id/input_area"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.946"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:id="@+id/input_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.755">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:background="@drawable/edittext_background"
                android:hint="@string/register_username"
                android:inputType="text"
                android:maxLength="16"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.username}"
                android:textSize="@dimen/font_normal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:background="@drawable/edittext_background"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.password}"
                android:textSize="@dimen/font_normal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:background="@drawable/edittext_background"
                android:hint="@string/register_confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.confirmPassword}"
                android:textSize="@dimen/font_normal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:background="@drawable/edittext_background"
                android:hint="@string/register_nickname"
                android:inputType="text"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.nickname}"
                android:textSize="@dimen/font_normal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:background="@drawable/edittext_background"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.email}"
                android:textSize="@dimen/font_normal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:background="@drawable/edittext_background"
                android:hint="@string/register_phone"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.phone}"
                android:textSize="@dimen/font_normal" />

            <LinearLayout
                android:id="@+id/register_gender_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:textSize="@dimen/font_normal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_gender"
                    android:textSize="@dimen/font_normal" />

                <RadioGroup
                    android:id="@+id/register_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@={viewModel.gender}"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/spacing_small">


                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male"
                        android:textSize="@dimen/font_normal" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textSize="@dimen/font_normal" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_area"
            app:layout_constraintVertical_bias="0.197"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewModel.confirm()}"
                android:text="@string/btn_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.311" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewModel.cancel()}"
                android:text="@string/btn_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btn_register"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.311" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>