<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_normal"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_small"
            android:text="@string/title_change_the_color"
            android:textSize="@dimen/font_large" />

        <LinearLayout
            android:id="@+id/dialog_folder_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_normal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_color_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/dialog_input_red"
                android:inputType="number"
                android:maxLength="3"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:textSize="@dimen/font_normal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_color_green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/dialog_input_green"
                android:inputType="number"
                android:maxLength="3"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:textSize="@dimen/font_normal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_color_blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/dialog_input_blue"
                android:inputType="number"
                android:maxLength="3"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:textSize="@dimen/font_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btns_table_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_folder_color"
            android:layout_marginHorizontal="@dimen/spacing_normal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:layout_weight="1"
                android:text="@string/btn_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/colorDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/colorDark" />

        </LinearLayout>
    </RelativeLayout>