<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="xyz.aiinirii.imarkdownx.ui.edit.main.EditMainViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_small"
            android:text="@string/title_create_a_folder"
            android:textSize="@dimen/font_large" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:background="@drawable/edittext_background"
            android:inputType="text"
            android:hint="@string/hint_folder_name"
            android:paddingVertical="@dimen/spacing_small"
            android:paddingHorizontal="@dimen/spacing_normal"
            android:textSize="@dimen/font_larger"
            tools:text="123123" />

        <LinearLayout
            android:id="@+id/btns_table_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_folder_name"
            android:layout_marginHorizontal="@dimen/spacing_normal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_weight="1"
                android:text="@string/btn_confirm"
                app:rippleColor="@color/colorDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                app:rippleColor="@color/colorDark" />

        </LinearLayout>

    </RelativeLayout>
</layout>