<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="xyz.aiinirii.imarkdownx.ui.edit.main.EditMainViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/width_normal"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_small"
            android:text="@string/title_enter_table_info"
            android:textSize="@dimen/font_large" />

        <LinearLayout
            android:id="@+id/dialog_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_normal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_table_row_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/dialog_row_number"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.tableRow}"
                android:textSize="@dimen/font_large" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_table_col_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/dialog_col_number"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="@dimen/spacing_normal"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@={viewModel.tableCol}"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btns_table_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_table"
            android:layout_marginHorizontal="@dimen/spacing_normal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:layout_weight="1"
                android:onClick="@{()->viewModel.confirmTableCreate()}"
                android:text="@string/btn_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/colorDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:layout_weight="1"
                android:onClick="@{()->viewModel.cancelTableCreate()}"
                android:text="@string/btn_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/colorDark" />

        </LinearLayout>
    </RelativeLayout>
</layout>